--- a/src/app/home/customerbanner/customerbanner.component.html
+++ b/src/app/home/customerbanner/customerbanner.component.html
@@ -4,11 +4,12 @@
 
             <div class="sign">
                 <span class="sign__word  p-l-20" style="font-size: 1rem;">
-                    <!-- <h1>{{'Home_Component.welcome'| translate}} <strong>{{this.childBannerData.userName}}</strong>! </h1> -->
-                    <h1>{{'Home_Component.welcome'| translate}} <strong>Ông chủ</strong>! </h1>
+                    <h1>{{'Home_Component.welcome'| translate}} <strong>{{this.childBannerData.userName}}</strong>! </h1>
+                
                 </span>
 
             </div>
+        
             <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center center" fxLayoutGap="5%"
                 class=" p-l-20 p-t-15">
 
