--- a/src/app/booking-manage/view-internal-booking/view-internal-booking.component.html
+++ b/src/app/booking-manage/view-internal-booking/view-internal-booking.component.html
@@ -1,9 +1,9 @@
 <mat-card class="mat-elevation-z20 container-custom">
   <mat-tab-group (selectedTabChange)="changeTabTransaction($event)">
-    <mat-tab label="Danh sách booking nội bộ">
+    <mat-tab label="Booking nội bộ">
       <midas-internal-booking-tab></midas-internal-booking-tab>
     </mat-tab>
-    <mat-tab label="Danh sách booking Advance">
+    <mat-tab label="Booking tạm ứng">
       <midas-roll-term-schedule-booking-tab></midas-roll-term-schedule-booking-tab>
     </mat-tab>
   </mat-tab-group>
