--- a/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.html
+++ b/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.html
@@ -172,7 +172,7 @@
         </ng-container>
 
         <ng-container matColumnDef="terminalId">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Máy POS</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>máy bán hàng</th>
           <td mat-cell *matCellDef="let form" [formGroup]="form">
             <mat-form-field
               style="width: 100% !important"
@@ -180,7 +180,7 @@
               *ngIf="form.contains('terminalId') && !form.contains('saved')"
               class="select-custom"
             >
-              <mat-label>Chọn máy POS</mat-label>
+              <mat-label>Chọn máy bán hàng</mat-label>
               <mat-select [required]="form?.data?.terminals?.length > 0" formControlName="terminalId">
                 <mat-option *ngFor="let type of form?.data?.terminals" [value]="type.terminalId">
                   {{ type.terminalName }} -
