add note , add create booking branch by rev value submit on time

--- a/src/app/booking-manage/dialog/add-booking-internal/add-booking-internal.component.html
+++ b/src/app/booking-manage/dialog/add-booking-internal/add-booking-internal.component.html
@@ -20,6 +20,11 @@
     <mat-label>Số tiền booking:</mat-label>
     <input matInput currencyMask formControlName="bookingAmount" />
   </mat-form-field>
+
+  <mat-form-field fxFlex="48%">
+    <mat-label>Ghi chú:</mat-label>
+    <input matInput currencyMask formControlName="note" />
+  </mat-form-field>
 </div>
 
 <mat-dialog-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
