--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -252,6 +252,7 @@
 
 <mat-menu #CardTransferMenu="matMenu" [overlapTrigger]="false">
   <button mat-menu-item routerLink="/card-transfer/create">Tạo biên bản giao/nhận thẻ</button>
+  <button mat-menu-item routerLink="/card-transfer/manage">Danh sách biên bản bàn giao</button>
 </mat-menu>
 
 <mat-menu #Marketing="matMenu" [overlapTrigger]="false">
