--- a/src/app/card-transfer/create-transfer/create-transfer.component.html
+++ b/src/app/card-transfer/create-transfer/create-transfer.component.html
@@ -1,19 +1,13 @@
-<h1 class="m-l-10" align="center">Tạo biên bản giao/nhận thẻ</h1>
 <mat-divider></mat-divider>
-<form [formGroup]="profileForm">
   <mat-card class="mat-elevation-z2 batchTxnCss">
+    <h1 class="m-l-10" align="center">BIÊN BẢN GIAO NHẬN THẺ</h1>
+    <hr>
     <mat-card-content>
       <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
         <mat-form-field fxFlex="20%">
           <mat-label>Thông tin thẻ để giao/nhận</mat-label>
-          <!-- <input
-            matInput
-            [formControl]="formFilter"
-            (click)="this.resetAutoComplete()"
-            [matAutocomplete]="clientsAutocomplete"
-          /> -->
-          <!-- <input type="text" matInput #querySearchAll (change)=" this.searchClientAndGroup(querySearchAll.value);" -->
-          <input type="text" formControlName="cardFilter" matInput #querySearchAll (ngModelChange)=" this.searchClientAndGroup(querySearchAll.value);"
+          <input type="text" placeholder="Tìm thẻ bằng SĐT/Tên KH/Số thẻ" [formControl]="cardFilter" matInput #querySearchAll
+          (ngModelChange)=" this.searchClientAndGroup(querySearchAll.value);"
           (click)="this.resetAutoCompleteClients()"
           [matAutocomplete]="clientsAutocomplete">
         </mat-form-field>
@@ -26,7 +20,7 @@
 
         <mat-form-field fxFlex="20%">
           <mat-label>Shipper</mat-label>
-          <input formControlName="shipperFilter"
+          <input placeholder="Chọn tên Shipper" [formControl]="shipperFilter"
             matInput
             (click)="this.resetAutoCompleteShipper()"
             [matAutocomplete]="shippersAutocomplete"
@@ -41,7 +35,7 @@
 
         <mat-form-field fxFlex="20%">
           <mat-label>Nhân viên giao</mat-label>
-          <input formControlName="deliverFilter"
+          <input [formControl]="deliverFilter"
             matInput
             [readonly]="true"
           />
@@ -49,7 +43,7 @@
 
         <mat-form-field fxFlex="20%">
           <mat-label>Nhân viên nhận</mat-label>
-          <input formControlName="staffFilter"
+          <input placeholder="Chọn nhân viên nhận thẻ" [formControl]="staffFilter"
             matInput
             (click)="this.resetAutoCompleteStaff()"
             [matAutocomplete]="staffsAutocomplete"
@@ -74,7 +68,7 @@
       <div class="example-table-container mat-elevation-z8" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-sm="column">
         <table mat-table class="mat-elevation-z8 example-table" multiTemplateDataRows [dataSource]="dataSource" matSort>
           <ng-container matColumnDef="transferDate">
-            <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Ngày giao dịch</th>
+            <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>NGÀY GIAO</th>
             <td mat-cell fxHide fxShow.gt-md style="word-wrap: break-word; width: 150px" *matCellDef="let value">
               <label>
                 {{ value.transferDate | date: "dd-MM-yyyy" }}
@@ -83,7 +77,7 @@
           </ng-container>
 
           <ng-container matColumnDef="customerName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Tên khách hàng</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>TÊN KHÁCH HÀNG</th>
             <td mat-cell *matCellDef="let value" style="max-width: 200px; word-break: break-word; text-align: left">
               <label>
                 {{ value.customerName }}
@@ -93,7 +87,7 @@
           </ng-container>
 
           <ng-container matColumnDef="cardNumber">
-            <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Số thẻ</th>
+            <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>SỐ THẺ</th>
             <td mat-cell fxHide fxShow.gt-md *matCellDef="let value">
               <label class="card-info">
                 {{ value.cardNumber.replace("XXX-XXX", "X") }}
@@ -102,7 +96,7 @@
           </ng-container>
 
           <ng-container matColumnDef="documentId" style="width: 25px">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Hành động</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>HÀNH ĐỘNG</th>
             <td mat-cell *matCellDef="let form">
               <button class="action-button" mat-raised-button color="warn" matTooltip="Xóa dòng này"
               (click)="deleteRow(form)">
@@ -121,7 +115,6 @@
           <tr
             mat-row
             *matRowDef="let element; columns: displayedColumns"
-            [formGroup]="element"
             class="example-element-row"
             [class.example-expanded-row]="expandedElement === element"
             (click)="expandedElement = expandedElement === element ? null : element"
@@ -129,24 +122,22 @@
           <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
         </table>
       </div>
-      <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" style="display: flex; justify-content: center; margin: 15px">
-        <button mat-button type="button" style="background: rgba(0, 0, 0, 0.4);; color: white; max-height: 50px; margin: 8px"
-        (click)="addWaitingList()"
+      <div class="buttonTransfer" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" style="display: flex; justify-content: center; margin: 15px">
+        <button mat-button type="button" style="background: rgba(0, 0, 0, 0.4);"
+        (click)="reset()"
         > Hủy
         </button>
-        <button mat-button type="button" style="background: #C3291C; color: white; max-height: 50px; margin: 8px"
+        <button mat-button type="button" style="background: #C3291C;"
         (click)="save()"
         > Lưu
         </button>
-        <button mat-button type="button" style="background: #A5A6F6; color: white; max-height: 50px; margin: 8px"
-        (click)="addWaitingList()"
+        <button mat-button type="button" style="background: #A5A6F6;"
+        (click)="doAction()"
         > Tải biên bản
         </button>
       </div>
 
-      <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center; background: white">
-        <mat-progress-spinner color="warn" mode="indeterminate"> </mat-progress-spinner>
-      </div>
+
     </mat-card-content>
     <mat-menu #transactionMenu="matMenu" [overlapTrigger]="false" style="width: 50px">
       <ng-template matMenuContent let-form="form" style="width: 50px">
@@ -156,9 +147,7 @@
         </button>
       </ng-template>
     </mat-menu>
-    <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center; background: white">
+    <!-- <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center; background: white">
       <mat-progress-spinner color="warn" mode="indeterminate"> </mat-progress-spinner>
-    </div>
+    </div> -->
   </mat-card>
-
-</form>
