--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -34,15 +34,14 @@
         </h3>
 
         <button
-        *midasHasPermission="'POS_UPDATE'"
-        (click)="submitTransactionUpToNow()"
-        style="align-self: center; margin-left: 20px;"
-        color=""
-        mat-raised-button
-      >
-        Chốt số &nbsp;<i class="fa fa-archive" aria-hidden="true"></i>
-      </button>
-
+          *midasHasPermission="'POS_UPDATE'"
+          (click)="submitTransactionUpToNow()"
+          style="align-self: center; margin-left: 20px"
+          color=""
+          mat-raised-button
+        >
+          Chốt số &nbsp;<i class="fa fa-archive" aria-hidden="true"></i>
+        </button>
       </div>
     </div>
     <div class="container" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column"></div>
@@ -234,6 +233,7 @@
             matBadgeSize="small"
           >
           </span>
+
           <span class="productId">
             {{ displayProductId(transaction.productId) }}
           </span>
@@ -299,6 +299,14 @@
             <button title="Tải hóa đơn" mat-mini-fab (click)="downloadVoucher(transaction.refid)" color="basic">
               <img src="assets/images/icons/bill.svg" />
             </button>
+          </span>
+          <br />
+          <span
+            *ngIf="transaction.isSubmit == 1"
+            style="color: white; font-weight: bold; background-color: black;"
+
+          >
+          Đã chốt số
           </span>
         </td>
       </ng-container>
@@ -450,7 +458,12 @@
         <hr />
         <button
           mat-menu-item
-          *ngIf="status == 'V' && type != 'rollTerm' && (today | date: 'dd/MM/yyyy') == (txnDate | date: 'dd/MM/yyyy') && isSubmit == 0 "
+          *ngIf="
+            status == 'V' &&
+            type != 'rollTerm' &&
+            (today | date: 'dd/MM/yyyy') == (txnDate | date: 'dd/MM/yyyy') &&
+            isSubmit == 0
+          "
           (click)="undoRevertTransaction(refid)"
         >
           <i class="fa fa-undo" aria-hidden="true"></i> &nbsp;Hoàn tác giao dịch
